2002-01-17  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* oprofile.c:
	* module/compat24.h: 
	* module/compat22.h: fix compile, nmi wake up check
	 
	* module/op_rtc.c: user/kernel profiling feature
 
2002-01-17  John Levon  <moz@compsoc.man.ac.uk>

	* doc/oprofile.sgml: clarification
 
	* module/compat22.h:
	* module/compat24.h:
	* module/oprofile.c: ->owner fixes
 
2002-01-17  John Levon  <moz@compsoc.man.ac.uk>

	* module/oprofile.h: clean up
 
	* module/compat.h:
	* module/compat22.h:
	* module/compat24.h: split header files up
	  for readability
 
2002-01-17  Philippe Elie  <ph_e@club-internet.fr>

	* TODO: update

	* doc/oprofile.sgml: speach about assembler

	* module/compat.h: small tweak for 2.2, no impact on 2.4

2002-01-16  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: look for rtc_lock
 
	* module/compat.h: use rtc_lock if there

2002-01-16  Philippe Elie  <ph_e@club-internet.fr>

	* module/compat.h:
	* module/apic_up_compat.h: cleanup + allow compile
	  !CONFIG_X86_LOCAL_APIC on 2.4/2.5. (only compile
	  tested)

2002-01-15  Philippe Elie  <ph_e@club-internet.fr>

	* events/op_events.c: avoid gui crash: event name must
	  contain only one word. If you test RTC patch destroy
	  ~/.oprofile/oprof_start_event#0

2002-01-15  John Levon  <moz@compsoc.man.ac.uk>

	* module/compat.h:
	* module/compat.c:
	* module/op_rtc.c: 2.2 modversions fix
 
2002-01-15  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* module/compat.h:
	* module/compat.c:
	* module/op_rtc.c: fix 2.2 compile

2002-01-15  John Levon  <moz@compsoc.man.ac.uk>

	* module/Makefile.in: whoops, forgot to commit this
 
2002-01-15  John Levon  <moz@compsoc.man.ac.uk>

	* gui/oprof_start.cpp: some improvements for RTC
 
2002-01-15  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_stop: fix "op_start && op_stop" bug using multiple
	  dump_stop writes.
 
2002-01-14  Dave Jones <davej@suse.de>

	* pp/op_time.cpp: fix for printing (NaN%) in the zero sample case.
