@@ -25,6 +25,7 @@
 
 // FIXME: must be shared.
 #define OP_MAX_PERF_COUNT	2147483647UL
+#define OP_MAX_RTC_COUNT	4096
 
 #define OP_DEFAULT_BUFFER_SIZE	262144
 #define OP_MAX_BUFFER_SIZE	1048576
